# qml-component-library

./: .gitignore  CMakeLists.txt  README.md
btn_inputs/: BtnLogin.qml  BtnLoginProps.qml  CMakeLists.txt
examples/btn_inputs/: CMakeLists.txt  Main.qml
examples/text_inputs/: CMakeLists.txt  Main.qml  main.cpp
text_inputs/: Border.qml  BorderSide.qml  CMakeLists.txt  CTextInput.qml  CTextInputProps.qml  Placeholder.qml  PlaceholderProps.qml
